fix: show live per-world settings in /spawnelytra info and share small-caps mapping